# TMIndiaBot

./: ..env.kate-swp  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  UPDATES.md  build.gradle  config.json  config.yaml  custom_errors.py  default-config.yaml  main.py  package-lock.json  package.json  prefixes.json  pyproject.toml  requirements.txt  settings.gradle
TMIBot/: __init__.py  __main__.py  api.py  bot.py  constants.py  log.py  monkey_typing.py
bot/: __init__.py  __main__.py  api.py  bot.py  checks.py  constants.py  converters.py  decorators.py  errors.py  log.py  monkey_typing.py
cogs/: channel_commands.py  commonFunctions.py  common_functions.py  community_content_promoter.py  convertLogging.py  convert_logging.py  cotd.py  generic.py  generic_slash.py  listeners.py  moderation.py  owner.py  quote.py  quote_slash.py  quoting.py  reaction_roles.py  set_channel_commands.py  set_channel_commands.py.DISABLED  testingcog.py  tm_commands.py  tmnf-x-commands.py  tmnfx_commands.py  tmnfx_commands.py.DISABLED  trackmania.py  username.py  username_commands.py  username_slash.py
data/: config.json  times_run.txt
functions/: common_functions.py  generic_functions.py  task_helpers.py  tm_commands_functions.py  usage.py
json_data/: announcement_channels.json  config.json  quotes.json  statuses.json  tm2020_usernames.json
json_files/: announcement_channels.json  config.json
pre-run/: linux.sh  windows.bat
util/: common_functions.py  constants.py  (+1 more)
(+276 files in other folders)
