[tool.poetry]
name = "TMIBot"
version = "1.6.1"
description = "The Open Source Trackmania Bot for the Trackmania India Discord Server."
authors = ["Deepesh Nimma"]
license = "GNU v3.0"

[tool.poetry.dependencies]
python = "3.9.*"
py-cord = {git = "https://github.com/Pycord-Development/pycord"}
requests = "^2.26.0"
python-dotenv = "^0.19.2"
psutil = "^5.8.0"
numpy = "^1.21.5"
Pillow = "^8.4.0"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
black = "^21.12b0"
arrow = "^1.2.1"
